[Ramki] Fix alignment issues

--- a/src/home/banner/index.scss
+++ b/src/home/banner/index.scss
@@ -443,6 +443,11 @@
     margin-left: 2px;
     background-image: url("../../imgs/youtube.png");
   }
+  .meetup {
+    width: 3.5vmax !important;
+    height: 3.5vmax !important;
+    background-image: url("../../imgs/meetup.png");
+  }
 
   .copyright {
     color: black;
