--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -30,11 +30,19 @@
     display: inline-block;
     margin-left: 12vmax;
     width: 35%;
+
+    @media only screen and (max-width: 480px) {
+      width: 65%;
+    }
   }
 
   .title {
     font-size: 2vmax;
     font-weight: 600;
+
+    @media only screen and (min-width: 481px) {
+      margin-bottom: 3vmax;
+    }
   }
 
   .button-wrapper {
@@ -63,6 +71,7 @@
     @media only screen and (max-width: 480px) {
       margin-left: 12vmax;
       margin-top: 4vmax;
+      width: 80%;
     }
   }
 
@@ -94,6 +103,7 @@
 
       @media only screen and (max-width: 480px) {
         width: 60%;
+        font-size: 1.5vmax;
       }
     }
   }
@@ -145,6 +155,8 @@
 
     @media only screen and (min-width: 481px) and (max-width: 1024px) {
       background-image: url("../imgs/colloborate-bg.png");
+      width: 60%;
+      margin-left: 0px;
       min-height: 30vmax;
     }
 
